<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#43b3e6"
    android:padding="26dp"
    tools:context=".VerifyAccount">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/title_verify_account"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/send_verification"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/code_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:hint="@string/verification_code"
        android:paddingBottom="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_border"
        android:text="@string/text_btn_send"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resend"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal" />

</LinearLayout>