<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#43b3e6"
    android:padding="26dp"
    tools:context=".Login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFCFC"
        android:backgroundTint="#FAFFFFFF"
        android:src="@drawable/ic_welcome_logo" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/txt_username_login"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/txt_password_login"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_border"
        android:text="@string/btn_login_login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_or_login"
        android:textAlignment="center"
        android:textColor="#FAFFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#43b3e6">

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_border"
        android:text="@string/txt_connect_login"
        android:textColor="#FFFFFF" />


    <ImageView
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFCFC"
        android:backgroundTint="#FAFFFFFF"
        android:src="@drawable/ic_welcome_fb_login"
        android:paddingTop="5dp"
        android:layout_marginStart="60dp"
        />

    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="80dp"
        android:text="@string/txt_register_login"
        android:textColor="#FAFFFFFF" />

</LinearLayout>