<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".UserHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/shader_template">

            <TextView
                android:id="@+id/user_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textAlignment="center"
                android:textColor="#43b3e6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blood_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/user_nama"
                android:textAlignment="center"
                android:textColor="#808284"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/shade_header">

            <ImageView
                android:id="@+id/header_profile"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:layout_marginTop="-100dp"
                app:srcCompat="@drawable/ic_header_profile" />

            <ImageView
                android:id="@+id/side_menu_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_side_menu" />

            <ImageView
                android:id="@+id/notif_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_notification" />

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/foto"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:background="@drawable/shader_template">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/blood_give_number"
            android:textColor="#43b3e6"
            android:textSize="30sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_received_number"
            android:textColor="#43b3e6"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks_number"
            android:textColor="#43b3e6"
            android:textSize="30sp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:text="@string/txt_blood_give"
            android:textColor="#808284"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_blood_received"
            android:textColor="#808284"
            android:textSize="13sp"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_thanks"
            android:textColor="#808284"
            android:textSize="13sp"
            android:layout_below="@+id/text1"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="5dp">


        <ImageView
            android:id="@+id/search_donor"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_search_donor" />

        <ImageView
            android:id="@+id/blood_needed"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_blood_needed" />

        <TextView
            android:id="@+id/txt_donor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_seach_donor"
            android:layout_below="@id/search_donor"
            android:layout_alignParentStart="true"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_blood_needed"
            android:layout_below="@id/search_donor"
            android:layout_alignParentEnd="true"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/txt_search_donor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seacrh_near_you"
            android:layout_below="@id/txt_donor"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="#808284"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_need_blood"
            android:layout_below="@id/txt_donor"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textColor="#808284"/>

        <ImageView
            android:id="@+id/profile_message"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txt_search_donor"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_message" />

        <ImageView
            android:id="@+id/donor_history"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txt_search_donor"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_donor_history" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_message"
            android:layout_below="@id/profile_message"
            android:layout_alignParentStart="true"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_donor_history"
            android:layout_below="@id/profile_message"
            android:layout_alignParentEnd="true"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_message"
            android:layout_below="@id/txt_message"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="#808284"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gives_received"
            android:layout_below="@id/txt_message"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textColor="#808284"/>

    </RelativeLayout>

</LinearLayout>